--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
+* {
+    margin: 0;
+}
+
 body {
     font-family: Raleway, Helvetica, Arial, Sans-Serif;
     opacity: 0;
+    color: black;
 }
 
 header {
@@ -9,20 +14,56 @@ header {
     height: calc(41.125vw + 8vh);
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .bg-img {
     width: 100%;
 }
 
-#title {
+#header-text {
     position: absolute;
     width: 100%;
     text-align: center;
+}
+
+#title {
     margin: 0;
-    bottom: 0;
+    font-size: 2.2em;
+}
+
+#motto {
+    color: rgba(90, 110, 150, 0.8);
+    margin-top: 0.5em;
 }
 
 .title-char {
-    opacity: 0;
+    display: inline-block;
+}
+
+nav {
+    height: calc(92vh - 41.125vw - 1.5em);
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-entry {
+    font-size: larger;
+    margin-top: 3vh;
+    width: 100%;
+    text-align: center;
+}
+
+.nav-entry a {
+}
+
+footer {
+    height: 1.5em;
+    width: 100%;
+    text-align: center;
+    font-size: 0.75em;
 }
 
 @media only screen and (min-width: 768px) {
@@ -31,7 +72,22 @@ header {
         height: 41.125vw;
     }
 
-    #title {
+    #header-text {
         bottom: 4vh;
+    }
+
+    nav {
+        flex-direction: row;
+        height: calc(100vh - 41.125vw - 1.5em);
+        justify-content: center;
+    }
+
+    .nav-entry:not(:last-child) {
+        margin-right: 3vw;
+    }
+
+    .nav-entry {
+        margin-top: 3vh;
+        width: auto;
     }
 }
