--- a/index.css
+++ b/index.css
@@ -11,13 +11,12 @@ body {
 header {
     position: relative;
     width: 100vw;
-    height: calc(41.125vw + 8vh);
+    height: calc(41.125vw + 12vh);
 }
 
 a {
     color: inherit;
     text-decoration: none;
-    display: inline-block;
 }
 
 .bg-img {
@@ -28,6 +27,7 @@ a {
     position: absolute;
     width: 100%;
     text-align: center;
+    bottom: 0;
 }
 
 #title {
@@ -45,19 +45,15 @@ a {
 }
 
 nav {
-    height: calc(92vh - 41.125vw - 1.5em);
+    height: calc(88vh - 41.125vw - 1.5em);
     display: flex;
     flex-direction: column;
 }
 
 .nav-entry {
-    font-size: larger;
     margin-top: 3vh;
     width: 100%;
     text-align: center;
-}
-
-.nav-entry a {
 }
 
 footer {
@@ -65,6 +61,54 @@ footer {
     width: 100%;
     text-align: center;
     font-size: 0.75em;
+}
+
+.nav-entry a {
+    display: inline-block;
+    font-size: larger;
+    padding: 10px;
+}
+
+.nav-entry a::before,
+.nav-entry a::after {
+    position: relative;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #000000;
+    content: '';
+    opacity: 0;
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+    -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+    transition: opacity 0.3s, transform 0.3s;
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    transform: translateY(-10px);
+}
+
+.nav-entry a::before {
+    top: 0;
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    transform: translateY(-10px);
+}
+
+.nav-entry a::after {
+    bottom: 0;
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    transform: translateY(10px);
+}
+
+.nav-entry a:hover::before,
+.nav-entry a:focus::before,
+.nav-entry a:hover::after,
+.nav-entry a:focus::after {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    transform: translateY(0px);
 }
 
 @media only screen and (min-width: 768px) {
