--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 header {
     position: relative;
     width: 100vw;
-    height: calc(41.125vw + 12vh);
+    height: calc(41.125vw + 5em);
 }
 
 a {
@@ -45,7 +45,7 @@ a {
 }
 
 nav {
-    height: calc(88vh - 41.125vw - 1.5em);
+    min-height: calc(100vh - 41.125vw - 6.5em);
     display: flex;
     flex-direction: column;
 }
@@ -111,7 +111,7 @@ footer {
     transform: translateY(0px);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
     /* For desktop */
     header {
         height: 41.125vw;
@@ -123,7 +123,7 @@ footer {
 
     nav {
         flex-direction: row;
-        height: calc(100vh - 41.125vw - 1.5em);
+        min-height: calc(100vh - 41.125vw - 1.5em);
         justify-content: center;
     }
 
